--- a/styles/notion.css
+++ b/styles/notion.css
@@ -124,6 +124,12 @@ font-size: 0.9em;
   padding: 0px 0;
 }
 
+@media (max-width: 767px) {
+  .notion > * {
+    padding: 0px 20px;
+  }
+}
+
 .notion-header .notion-nav-header {
   background: white;
 }
@@ -207,7 +213,7 @@ font-size: 0.9em;
 }
 
 .notion-gallery-grid .notion-property-text {
-  font-size: 14px;
+  font-size: 16px;
   display: none;
 }
 
